--- a/templates/Back/base.html.twig
+++ b/templates/Back/base.html.twig
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 	<div class="wrapper">
 		{% block sideBar %}
 		<nav id="sidebar" class="sidebar js-sidebar">
