--- a/templates/Front/base.html.twig
+++ b/templates/Front/base.html.twig
@@ -47,13 +47,14 @@
 
 
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 {% block header %}
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="{{ path ('app_acceuil')}}" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-         <img src="{{ asset ('img/logo.png') }}" alt=""> 
+         {# <img src="{{ asset ('/img/loge_city.png') }}" alt="">  #}
         <h1 class="">Mentor</h1>
       </a>
       <nav id="navmenu" class="navmenu">
