--- a/templates/Back/parking/edit.html.twig
+++ b/templates/Back/parking/edit.html.twig
@@ -23,6 +23,18 @@
       <i class="align-middle" data-feather="car"></i> <span class="align-middle">Parking</span>
     </a>
             </li>
+
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="{{path('app_parking_stat')}}">
+      <i class="align-middle" data-feather="stat"></i> <span class="align-middle">Statistic</span>
+    </a>
+            </li>
+
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="{{path('app_parking_recy')}}">
+      <i class="align-middle" data-feather="stat"></i> <span class="align-middle">Recycle</span>
+    </a>
+            </li>
         </ul>
     </div>
 </nav>
