--- a/templates/Front/base.html.twig
+++ b/templates/Front/base.html.twig
@@ -39,7 +39,7 @@
    {% endblock %}
       {% endblock %}
 </head>
-<body>
+<body style="display: flex; flex-direction: column; min-height: 100vh;">
 {% block header %}
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
@@ -69,7 +69,7 @@
     {% endblock %}
 {% block body %}{% endblock %}
 
-  <main class="main">
+  <main class="main" style="flex-grow: 1;">
 {% block section %}
 {% endblock %}
     </section><!-- /Hero Section -->
@@ -95,11 +95,11 @@
 {% endblock %}
   </main>
 {% block footer %}
-  <footer id="footer" class="footer position-relative">
+  <footer id="footer" class="footer position-relative" style="margin-top: auto;">
 
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
+        {# <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="">Mentor</span>
           </a>
@@ -148,11 +148,11 @@
             <div class="error-message"></div>
             <div class="sent-message">Your subscription request has been sent. Thank you!</div>
           </form>
-        </div>
+        </div> #}
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    {# <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1">SiteName</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
@@ -161,7 +161,7 @@
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
-    </div>
+    </div> #}
 
   </footer>
 {%endblock %}
