--- a/templates/Front/rendez_vous/showRV.html.twig
+++ b/templates/Front/rendez_vous/showRV.html.twig
@@ -53,6 +53,24 @@
 });
 
 </script>
+      {# ------------------------- #}
+      <form style="margin-left: 40px;" action="{{ path('front_app_rv_tri') }}" method="GET">
+    <label for="order">Ordre :</label>
+    <select name="order" id="order">
+        <option value="asc">Croissant</option>
+        <option value="desc">Décroissant</option>
+    </select>
+
+    <label for="field">Champ de tri :</label>
+    <select name="field" id="field">
+        <option value="date">Date</option>
+        <option value="nomMedecin">Nom Médecin</option>
+        <!-- Ajoutez d'autres options pour les champs de tri si nécessaire -->
+    </select>
+
+    <button type="submit" class="btn btn-primary">Trier</button>
+</form>
+
 
     <div class="search-appointments"></div>
     <div class"firstsearch"> 
