--- a/templates/Front/article/index.html.twig
+++ b/templates/Front/article/index.html.twig
@@ -10,8 +10,11 @@
             <a href="{{ path('cart_index') }}">
                 <i class="bi bi-cart4" style="color: #333071; font-size: 45px;"></i>
             </a>
+          
         </div>
-       
+            
+
+
     </div>
 
     <!-- Section d'accueil -->
@@ -23,18 +26,13 @@
         <!-- Formulaire de tri -->
         <div class="row mb-4 align-items-center">
             <div class="col-md-6">
-                <form action="{{ path('app_article_index') }}" method="GET" class="form-inline">
-                    <label for="sortOrder" class="mr-2">Trier par :</label>
-                    <div class="input-group">
-                        <select name="sortOrder" id="sortOrder" class="form-control mr-2">
-                            <option value="asc" {% if app.request.query.get('sortOrder') == 'asc' %}selected{% endif %}>Prix croissant</option>
-                            <option value="desc" {% if app.request.query.get('sortOrder') == 'desc' %}selected{% endif %}>Prix décroissant</option>
-                        </select>
-                        <div class="input-group-append">
-                            <button type="submit" class="btn btn-primary">Trier</button>
-                        </div>
-                    </div>
-                </form>
+               <div class="row mt-3">
+        <div class="container">
+            <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search...">
+            <div class="card-container row"></div>
+        </div>
+    </div>
+                
             </div>
         </div>
     </div>
@@ -69,12 +67,30 @@
                 {% endfor %}
             </div>
         </div>
-    {% endblock %}
-    <div class="row mt-4">
-        
-        <h2 class="text-center mb-4">DECOUVREZ NOS ARTICLES UNIQUES</h2>
-        
+{% endblock %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h2 class="text-center mb-4">DECOUVREZ NOS ARTICLES UNIQUES</h2>
+        </div>
+        <div class="col-md-3">
+            <form action="{{ path('app_article_index') }}" method="GET" class="form-inline">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <label for="sortOrder" class="input-group-text">Trier par :</label>
+                    </div>
+                    <select name="sortOrder" id="sortOrder" class="custom-select mr-sm-2">
+                        <option value="asc" {% if app.request.query.get('sortOrder') == 'asc' %}selected{% endif %}>Prix croissant</option>
+                        <option value="desc" {% if app.request.query.get('sortOrder') == 'desc' %}selected{% endif %}>Prix décroissant</option>
+                    </select>
+                    <button type="submit" >Trier</button>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
+
+
     <div class="container">
         <div class="row">
             {% for article in articles %}
@@ -128,6 +144,64 @@
             </ul>
         </nav>
     {% endif %}
+    
+   
+    <script>
+        // JavaScript code for searching and updating the cards
+
+        function search() {
+            var query = document.getElementById('searchInput').value;
+            var xhr = new XMLHttpRequest();
+
+            xhr.open('GET', '{{ path('app_article_search') }}?q=' + query, true);
+
+            xhr.onload = function () {
+                if (xhr.status === 200) {
+                    var response = JSON.parse(xhr.responseText);
+                    updateCards(response);
+                }
+            };
+
+            xhr.send();
+        }
+
+        function updateCards(data) {
+            var cardContainer = document.querySelector('.card-container');
+            cardContainer.innerHTML = ''; // Clear existing cards
+
+            if (data.length > 0) {
+                data.forEach(function (article) {
+                    var card = '<div class="col-md-3 mb-3">';
+                    card += '<div class="card article-card border rounded" style="width: 100%; max-width: 400px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);">';
+                    card += '<div class="card-body">';
+                    card += '<h4 class="card-title font-weight-bold mb-0">' + article.nomArticle + '</h4>';
+                    card += '<h5 class="card-text mb-0"><span style="color: red; font-weight: bold;">' + article.prixArticle + ' DT</span></h5>';
+                    card += '<p class="card-text mb-2">' + article.typeArticle + '</p>';
+                    card += '<p class="card-text mb-3"><span style="color: grey;">' + article.descriptionArticle + '</span></p>';
+    
+                    card += '<div class="d-flex justify-content-between align-items-center mt-3">';
+                
+                    card += '</div>';
+                    card += '</div>';
+                    card += '</div>';
+                    card += '</div>';
+                    cardContainer.innerHTML += card;
+                });
+            } else {
+                cardContainer.innerHTML = '<p class="text-center">Aucun résultat trouvé</p>';
+            }
+        }
+
+        function addToCart(articleId) {
+            // Envoyer la requête pour ajouter au panier avec l'ID de l'article
+            console.log('Ajout de l\'article au panier avec ID:', articleId);
+            // Ici, vous pouvez ajouter votre logique JavaScript pour ajouter au panier
+        }
+
+        document.getElementById('searchInput').addEventListener('input', function () {
+            search();
+        });
+    </script>
 
     <hr style="border-top: 5px solid #333071; width: 100%;">
     <img src="{{ asset('img/article3.png') }}" alt="" data-aos="fade-in" style="width: 100%; max-width: 100%;">
