--- a/templates/Back/base.html.twig
+++ b/templates/Back/base.html.twig
@@ -26,7 +26,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="{{ path ('app_back_acceuil')}}">
-		   <img src="{{ asset('img/logo2.png') }}" class="img-fluid" alt="Logo" style="max-width: 100px;"> 
+		   <img src="{{ asset('img/logo.png') }}" class="img-fluid" alt="Logo" style="max-width: 100px;"> 
         </a>
 
 				<ul class="sidebar-nav">
