--- a/templates/Back/commande/index.html.twig
+++ b/templates/Back/commande/index.html.twig
@@ -62,9 +62,31 @@
                         </div>
                     </div>
                 </div>
+                 
             {% else %}
                 <p>Aucune commande n'a été trouvée.</p>
             {% endfor %}
         </div>
+        {% if commandes|length > 0 %}
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                {% if page > 1 %}
+                    <li class="page-item">
+                        <a class="page-link" href="{{ path('app_commande_index_back', {'page': page - 1}) }}">Précédent</a>
+                    </li>
+                {% endif %}
+                {% for i in 1..maxPage %}
+                    <li class="page-item {% if page == i %}active{% endif %}">
+                        <a class="page-link" href="{{ path('app_commande_index_back', {'page': i}) }}">{{ i }}</a>
+                    </li>
+                {% endfor %}
+                {% if page < maxPage %}
+                    <li class="page-item">
+                        <a class="page-link" href="{{ path('app_commande_index_back', {'page': page + 1}) }}">Suivant</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
     </div>
 {% endblock %}
