--- a/templates/Back/parking/recycle.html.twig
+++ b/templates/Back/parking/recycle.html.twig
@@ -43,7 +43,7 @@
 
 {% block main %}
 {# <br> <h1>Liste Parking ( <a href="{{ path('app_parking_new') }}"><i class="fas fa-plus"></i></a> )</h1> <br> #}
-
+<div class="content">
     
 
     <table class="table" style="text-align: center;">
@@ -97,5 +97,5 @@
 {# {{ knp_pagination_render(pag) }} #}
 
     {# <a href="{{ path('app_parking_new') }}">Create new</a> #}
-    
+    </div>
 {% endblock %}
