--- a/templates/Back/parking/chart.html.twig
+++ b/templates/Back/parking/chart.html.twig
@@ -47,21 +47,22 @@
         {% for parking in parkings %}
             {% set listNom = listNom|merge([parking.nomParking]) %}
         {% endfor %}
-    
+        <div class="content">
 <div class="container-fluid p-0">
     <div class="col-12 col-lg-6">
-        <div class="card">
+        <div class="card" style="width: 200%; height: 130%">
             {# <div class="card-header">
                 <h5 class="card-title">Bar Chart</h5>
                 <h6 class="card-subtitle text-muted">A bar chart provides a way of showing data values represented as vertical bars.</h6>
             </div> #}
             <div class="card-body">
-                <div class="chart">
+                <div class="chart" style="width: 100%; height: 100%">
                     <canvas id="chartjs-bar"></canvas>
                 </div>
             </div>
         </div>
     </div>  
+</div>
 </div>
 
     {# <a href="{{ path('app_parking_new') }}">Create new</a> #}
