--- a/templates/Back/parking/edit.html.twig
+++ b/templates/Back/parking/edit.html.twig
@@ -41,6 +41,7 @@
 {% endblock %}
 
 {% block main %}
+<div class="content">
     <br><h1><a href="{{ path('app_parkingB') }}" class="btn" style ="width: 50px;"><i class="fas fa-arrow-left fa-2x"></i></a>Modifier Parking</h1><br>
 
     {# {{ include('Back/parking/_form.html.twig', {'button_label': 'Update'}) }} #}
@@ -49,4 +50,5 @@
     {# <a href="{{ path('app_parkingB') }}">back to list</a> #}
 {# 
     {{ include('Back/parking/_delete_form.html.twig') }} #}
+</div>
 {% endblock %}
