--- a/templates/Back/parking/new.html.twig
+++ b/templates/Back/parking/new.html.twig
@@ -40,10 +40,11 @@
 {% endblock %}
 
 {% block main %}
+<div class="content">
     <h1><a href="{{ path('app_parkingB') }}" class="btn" style ="width: 50px;"><i class="fas fa-arrow-left fa-2x"></i></a>Ajouter Parking</h1>
 
     {# {{ include('Back/parking/_form.html.twig', {'button_label': 'Update'}) }} #}
     {{ include('Back/parking/_form.html.twig') }}
-
+</div>
     {# <a href="{{ path('app_parkingB') }}">back to list</a> #}
 {% endblock %}
