--- a/templates/Back/parking/show.html.twig
+++ b/templates/Back/parking/show.html.twig
@@ -41,7 +41,7 @@
 
 {% block main %}
     {# <h1>Parking ( <a href="{{ path('app_parking_edit', {'idParking': parking.idParking}) }}"><i class="fas fa-pencil-alt"></i></a> | {{ include('Back/parking/_delete_form.html.twig') }} )</h1> #}
-
+    <div class="content">
     <h1>
         <a href="{{ path('app_parkingB') }}" class="btn" style ="width: 50px;"><i class="fas fa-arrow-left fa-2x"></i></a>Parking (
         <span style="display: inline-block; margin-right: 10px; margin-left: 10px;">
@@ -96,6 +96,6 @@
     <a href="{{ path('app_place_indexB', {idP: parking.idParking}) }}" class="btn btn-primary" style="width: 150px;">Liste des places</a>
 
     
-
+</div>
     
 {% endblock %}
