--- a/templates/Front/place/index.html.twig
+++ b/templates/Front/place/index.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block body %}
-    <div>
+    <div class="container">
         <h1>Liste des Places</h1><br>
         
         <!-- Add the radio button to toggle the visibility of the filter combo box -->
