--- a/templates/back/billetback.html.twig
+++ b/templates/back/billetback.html.twig
@@ -68,13 +68,13 @@
  
 
 
-<div class="d-flex align-items-center" style="margin-top: -10px;"> <!-- Ajout de margin-top négatif pour rapprocher l'icône du tableau -->
+{# <div class="d-flex align-items-center" style="margin-top: -10px;"> <!-- Ajout de margin-top négatif pour rapprocher l'icône du tableau -->
     <div style="flex-grow: 1;">
     </div>
     <a href="{{ path('Extract_data') }}" type="button" style="display: flex; align-items: center; margin-left: 10px;">
         <i data-feather="file-text" style="width: 32px; height: 32px;"></i>
     </a>
-</div>
+</div> #}
 
 
 <div style="margin-top: 20px;"> <!-- Ajustez la marge supérieure selon vos besoins -->
