--- a/templates/back/pdf.html.twig
+++ b/templates/back/pdf.html.twig
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-
+<img src="{{ absolute_url (asset('img\city.png'))}}" >
 <div class="date-info">Datée le : {{ date|date('Y-m-d') }}</div>
 {% block body %}
 <div class="row">
