--- a/templates/Back/parking/index.html.twig
+++ b/templates/Back/parking/index.html.twig
@@ -75,7 +75,7 @@
         <thead>
             <tr>
                 {# <th>Id_parking</th> #}
-                <th>Nom<button class="sort-button" data-sort-by="Nom">Trier par nom</button></th>
+                <th>Nom<button class="sort-button" data-sort-by="Nom"><div><i class="align-middle me-2" data-feather="arrow-down"></i></div>Trier par nom</button></th>
                 <th>Address<button class="sort-button" data-sort-by="Address">Trier par address</button></th>
                 {# <th>Latitude</th>
                 <th>Longitude</th> #}
