--- a/templates/Back/base.html.twig
+++ b/templates/Back/base.html.twig
@@ -13,6 +13,7 @@
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
+	<link rel="canonical" href="https://demo-basic.adminkit.io/icons-feather.html" />
 
 	<title>AdminKit Demo - Bootstrap 5 Admin Template</title>
 
